[package]
name = "madara-test-devnet"
version = "0.1.0"
edition = "2021"

[dependencies]

# Starknet Deps
starknet = "0.12.0"
starknet-accounts = "0.11.0"
starknet-core = "0.12.0"
starknet-crypto = "0.7.0"
starknet-providers = "0.12"
starknet-signers = "0.10.0"
starknet-types-core = { version = "0.1.5", default-features = false, features = [
  "hash",
] }
starknet_api = { git = "https://github.com/bidzyyys/starknet-api.git", branch = "feature/scale-codec" }
tokio = { version = "1.28", features = ["full"] }

# Other Deps
serde = "1.0"
serde_json = "1.0"
